--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </form>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const socket = io(":3000");
+      const socket = io();
 
       function addMessage(message) {
         const messages = document.getElementById("messages");
