chore: Update socket connection to use crossorigin attribute
The code changes in the index.html file update the socket connection to include the crossorigin attribute in the script tag. This change aligns with recent user commits that updated the socket connection port to 3000.

This commit message follows the established convention of using the "chore" type for changes related to project maintenance and configuration updates.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <form id="form" action="">
       <input id="input" autocomplete="off" /><button>Send</button>
     </form>
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js" crossorigin="anonymous"></script>
     <script>
       const socket = io();
 
