--- a/public/login.html
+++ b/public/login.html
@@ -8,6 +8,7 @@
   <button id="createRoom">Create Room</button>
   <input type="text" id="roomId" placeholder="Enter Room ID">
   <button id="joinRoom">Join Room</button>
+  <button id="joinRoomAsViewer">Join Room as Viewer</button>
   <div id="status"></div>
 
   <script src="/socket.io/socket.io.js"></script>
@@ -21,6 +22,11 @@
     document.getElementById('joinRoom').onclick = () => {
       const roomId = document.getElementById('roomId').value;
       window.location.href = `/room/${roomId}`;
+    };
+
+    document.getElementById('joinRoomAsViewer').onclick = () => {
+      const roomId = document.getElementById('roomId').value;
+      window.location.href = `/viewer/${roomId}`;
     };
 
     socket.on('roomCreated', (data) => {
