--- a/public/room.html
+++ b/public/room.html
@@ -8,8 +8,7 @@
   <div id="roomId"></div>
   <div id="activity"></div>
   <div id="status"></div>
-  <div id="red-players"></div>
-  <div id="blue-players"></div>
+  <div id="players"></div>
   <div id="controls">
     <button id="startGame">Start Game</button>
   </div>
@@ -40,8 +39,7 @@
     });
 
     socket.on('playersInRoom', (data) => {
-      document.getElementById('red-players').innerText = `Red players: ${data.redUsers.map((user) => {return user.id}).join(', ')}`;
-      document.getElementById('blue-players').innerText = `Blue players: ${data.blueUsers.map((user) => {return user.id}).join(', ')}`;
+      document.getElementById('players').innerText = `Players: ${data.Users.map((user) => {return user.id}).join(', ')}`;
     });
 
     socket.on('gameReady', () => {
@@ -52,6 +50,12 @@
     socket.on('gameNotReady', () => {
       document.getElementById('status').innerText = `Not enough players to start the game.`;
       document.getElementById('startGame').style.display = 'none';
+    });
+
+    socket.on('gameStarted', (data) => {
+      document.getElementById('status').innerText = `Game started!`;
+      document.getElementById('startGame').style.display = 'none';
+      console.log(data);
     });
   </script>
 </body>
