--- a/public/viewer.html
+++ b/public/viewer.html
@@ -9,8 +9,7 @@
     <h1>Socket.IO Viewers</h1>
     <div id="roomId"></div>
     <div id="status"></div>
-    <div id="red-players"></div>
-    <div id="blue-players"></div>
+    <div id="players"></div>
     <div id="game"></div>
 
     <script src="/socket.io/socket.io.js"></script>
@@ -22,7 +21,7 @@
         socket.emit('joinRoomAsViewer', roomId);
 
         socket.on('roomJoined', (data) => {
-        document.getElementById('status').innerText = `Joined room with ID: ${data.roomId} and team: ${data.team}`;
+        document.getElementById('status').innerText = `Joined room with ID: ${data.roomId} as a viewer.`;
         });
 
         socket.on('roomNotFound', () => {
@@ -30,8 +29,7 @@
         });
 
         socket.on('playersInRoom', (data) => {
-            document.getElementById('red-players').innerText = `Red players: ${data.redUsers.map((user) => {return user.id}).join(', ')}`;
-            document.getElementById('blue-players').innerText = `Blue players: ${data.blueUsers.map((user) => {return user.id}).join(', ')}`;
+            document.getElementById('players').innerText = `Players: ${data.Users.map((user) => {return user.id}).join(', ')}`;
         });
 
         socket.on('gameReady', () => {
@@ -40,6 +38,11 @@
 
         socket.on('gameNotReady', () => {
         document.getElementById('status').innerText = `Not enough players to start the game.`;
+        });
+
+        socket.on('gameStarted', (data) => {
+        document.getElementById('status').innerText = `Game started!`;
+        console.log(data);
         });
     </script>
 </body>
