Added basic frontend to Viewing Page

--- a/public/viewer.html
+++ b/public/viewer.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Socket.IO Rooms - Viewer</title>
+    <title>Maze Motion | Watch</title>
+    <link rel="stylesheet" href="/style/viewer.css">
 </head>
 <body>
-    <h1>Socket.IO Viewers</h1>
+    <h1>SPECTATE MODE</h1>
     <div id="roomId"></div>
     <div id="status"></div>
     <div id="players"></div>
