--- a/public/room.html
+++ b/public/room.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Socket.IO Room</title>
-    <link rel="stylesheet" href="/style/style.css" />
+    <link rel="stylesheet" href="../style/style.css" />
   </head>
   <body>
     <header>
