--- a/public/room.html
+++ b/public/room.html
@@ -57,7 +57,12 @@
       });
 
       socket.on("roomNotFound", () => {
-        document.getElementById("status").innerText = `Room not found`;
+        document.getElementById(
+          "status"
+        ).innerText = `Room not found join existing room or create new room`;
+        document.getElementById("startGame").style.display = "none";
+        document.getElementById("pauseButton").style.display = "none";
+        document.getElementById("timer").style.display = "none";
       });
 
       socket.on("roomFull", () => {
@@ -75,18 +80,24 @@
       socket.on("gameReady", () => {
         document.getElementById("status").innerText = `Game ready to start!`;
         document.getElementById("startGame").style.display = "block";
+        document.getElementById("pauseButton").style.display = "none";
+        document.getElementById("timer").style.display = "none";
       });
 
       socket.on("gameNotReady", () => {
         document.getElementById(
           "status"
         ).innerText = `Not enough players to start the game.`;
-        document.getElementById("startGame").style.display = "none";
+        document.getElementById("startGame").style.display = "b";
+        document.getElementById("pauseButton").style.display = "none";
+        document.getElementById("timer").style.display = "none";
       });
 
       socket.on("gameStarted", (data) => {
         document.getElementById("status").innerText = `Game started!`;
         document.getElementById("startGame").style.display = "none";
+        document.getElementById("pauseButton").style.display = "inline";
+        document.getElementById("timer").style.display = "inline";
         console.log(data);
       });
 
