--- a/public/room.html
+++ b/public/room.html
@@ -88,7 +88,7 @@
         document.getElementById(
           "status"
         ).innerText = `Not enough players to start the game.`;
-        document.getElementById("startGame").style.display = "b";
+        document.getElementById("startGame").style.display = "none";
         document.getElementById("pauseButton").style.display = "none";
         document.getElementById("timer").style.display = "none";
       });
