--- a/public/viewer.html
+++ b/public/viewer.html
@@ -10,41 +10,83 @@
     <h1>SPECTATE MODE</h1>
     <div id="roomId"></div>
     <div id="status"></div>
-    <div id="players"></div>
-    <div id="game"></div>
-
+    <ul id="players"></ul> <!-- Change to list for dynamic updates -->
+    <button id="fullscreenBtn">Toggle Fullscreen</button>
+    <canvas id="game"></canvas>  
+    <button id="back">&lt;-</button>
     <script src="/socket.io/socket.io.js"></script>
     <script>
         const socket = io();
         const roomId = window.location.pathname.split('/').pop();
-        document.getElementById('roomId').innerText = `Room ID: ${roomId}`;
+        document.getElementById('roomId').innerText = `Lobby ID: ${roomId}`;
 
         socket.emit('joinRoomAsViewer', roomId);
 
+        socket.on('connect_error', (err) => {
+            document.getElementById('status').innerText = `Connection error: ${err.message}`;
+        });
+
         socket.on('roomJoined', (data) => {
-        document.getElementById('status').innerText = `Joined room with ID: ${data.roomId} as a viewer.`;
+            document.getElementById('status').innerText = `Joined Lobby with ID -> ${data.roomId} as a viewer.`;
         });
 
         socket.on('roomNotFound', () => {
-        document.getElementById('status').innerText = `Room not found`;
+            document.getElementById('status').innerText = `Room not found`;
         });
 
         socket.on('playersInRoom', (data) => {
-            document.getElementById('players').innerText = `Players: ${data.Users.map((user) => {return user.id}).join(', ')}`;
+            const playersElement = document.getElementById('players');
+            playersElement.innerHTML = 'Players:';
+            data.Users.forEach((user) => {
+                const playerItem = document.createElement('li');
+                playerItem.innerText = `Player ID: ${user.id}`;
+                playersElement.appendChild(playerItem);
+            });
         });
 
         socket.on('gameReady', () => {
-        document.getElementById('status').innerText = `Game ready to start!`;
+            const statusElement = document.getElementById('status');
+            statusElement.innerText = `Game ready to start!`;
+            statusElement.style.color = 'green'; 
         });
 
         socket.on('gameNotReady', () => {
-        document.getElementById('status').innerText = `Not enough players to start the game.`;
+            document.getElementById('status').innerText = `Not enough players to start the game.`;
         });
 
         socket.on('gameStarted', (data) => {
-        document.getElementById('status').innerText = `Game started!`;
-        console.log(data);
+            document.getElementById('status').innerText = `Game started!`;
+            console.log(data);
         });
+
+        document.getElementById('back').addEventListener('click', function() {
+            window.location.href = '/'; 
+        });
+
+        document.getElementById('fullscreenBtn').addEventListener('click', function() {
+        const canvas = document.getElementById('game');
+        if (!document.fullscreenElement) {
+          if (canvas.requestFullscreen) {
+            canvas.requestFullscreen();
+          } else if (canvas.mozRequestFullScreen) { 
+            canvas.mozRequestFullScreen();
+          } else if (canvas.webkitRequestFullscreen) { 
+            canvas.webkitRequestFullscreen();
+          } else if (canvas.msRequestFullscreen) { 
+            canvas.msRequestFullscreen();
+          }
+        } else {
+          if (document.exitFullscreen) {
+            document.exitFullscreen();
+          } else if (document.mozCancelFullScreen) { 
+            document.mozCancelFullScreen();
+          } else if (document.webkitExitFullscreen) { 
+            document.webkitExitFullscreen();
+          } else if (document.msExitFullscreen) {
+            document.msExitFullscreen();
+          }
+        }
+      });
     </script>
 </body>
 </html>
