refactor: Update room.html and index.js for improved game room functionality

--- a/public/room.html
+++ b/public/room.html
@@ -99,12 +99,15 @@
       });
 
       socket.on("playersInRoom", (data) => {
+        console.log(data);
         document.getElementById(
           "players"
         ).innerText = `Current Lobby -> ${data.Users.map((user) => {
           return user.id;
         }).join(", ")}`;
-        id = data.id;
+        if(id === '') {
+          id = data.id;
+        }
       });
 
       socket.on("gameReady", () => {
