--- a/public/room.html
+++ b/public/room.html
@@ -50,20 +50,24 @@
       let ball = { x: 1, y: 1 };
       let ballcol = 'red';
       const cellSize = 7;
+      let velocity = { x: 0, y: 0 };
+        let friction = 0.98;
+        let sensitivity = 0.009;
+
 
       window.addEventListener('keydown', event => {
           switch (event.key) {
               case 'ArrowUp':
-                  moveBall(maze, ball, 0, -1, ctx, cellSize);
+                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowDown':
-                  moveBall(maze, ball, 0, 1, ctx, cellSize);
+                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowLeft':
-                  moveBall(maze, ball, -1, 0, ctx, cellSize);
+                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowRight':
-                  moveBall(maze, ball, 1, 0, ctx, cellSize);
+                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
                   break;
           }
       });
@@ -140,6 +144,7 @@
           ball = user.position;
           drawMaze(data.maze, ctx, cellSize);
           drawBall(ball, ctx, cellSize);
+          initGyroscope();
         }
       });
 
@@ -273,6 +278,38 @@
                 drawBall(ball, ctx, cellSize);
             }
         }
+        async function initGyroscope() {
+            try {
+                if ('Gyroscope' in window) {
+                    const permissionStatus = await navigator.permissions.query({ name: 'gyroscope' });
+
+                    if (permissionStatus.state === 'granted') {
+                        startGyroscope();
+                    } else if (permissionStatus.state === 'prompt') {
+                        console.log('Requesting gyroscope permission...');
+                        startGyroscope();
+                    } else {
+                        console.log('Gyroscope permission is denied.');
+                        updateUIForNoGyroscope();
+                    }
+                } else {
+                    console.log('Gyroscope API is not supported in this browser.');
+                    updateUIForNoGyroscope();
+                }
+            } catch (error) {
+                console.error('Error initializing gyroscope:', error);
+                updateUIForNoGyroscope();
+            }
+        }
+        function startGyroscope() {
+            let gyro = new Gyroscope({ frequency: 60 });
+            gyro.addEventListener('reading', () => {
+                velocity.x += gyro.y * sensitivity; // left-right tilt
+                velocity.y += gyro.x * sensitivity; // forward-backward tilt
+            });
+            gyro.start();
+        }
+
     </script>
   </body>
 </html>
