feat: Improve game room functionality and user experience
The code changes include:
- Added a check to ensure the socket exists in the room before starting the game
- Updated the status element in room.html to display "Room is full" in red color
- Hid the start game button, pause button, and timer in room.html when the room is full
- Updated the drawMaze function in room.html to fill cells with green color for value 2 in the maze array

Recent user commits:
- Refactored room.html and index.js for improved game room functionality
- Added random color and position to new users in the game room
- Generated maze dynamically for each game room
- Updated socket event names for updating positions in room.html and viewer.html

Recent repository commits:
- Hopefully fixed fullscreen on Apple devices
- Updated frontend for all pages, added navigation, cleaned redundant code, added fullscreen options, formatted canvas
- Added functionalities v2
- Merged branch 'main' of https://github.com/waveyboym/bbd-mazemotion
- Added functionalities v1

--- a/public/room.html
+++ b/public/room.html
@@ -95,7 +95,12 @@
       });
 
       socket.on("roomFull", () => {
-        document.getElementById("status").innerText = `Room is full`;
+        const statusElement = document.getElementById("status");
+        statusElement.innerText = `Room is full`;
+        statusElement.style.color = "red";
+        document.getElementById("startGame").style.display = "none";
+        document.getElementById("pauseButton").style.display = "none";
+        document.getElementById("timer").style.display = "none";
       });
 
       socket.on("playersInRoom", (data) => {
@@ -248,7 +253,7 @@
         function drawMaze(maze, ctx, cellSize) {
             for (let y = 0; y < maze.length; y++) {
                 for (let x = 0; x < maze[y].length; x++) {
-                    ctx.fillStyle = maze[y][x] === 1 ? 'black' : 'white';
+                    ctx.fillStyle = maze[y][x] === 2 ? 'green': maze[y][x] === 1 ? 'black' : 'white';
                     ctx.fillRect(x * cellSize, y * cellSize, cellSize, cellSize);
                 }
             }
