--- a/public/room.html
+++ b/public/room.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Maze Motion | Lobby </title>
+    <title>Maze Motion | Lobby</title>
     <link rel="stylesheet" href="../style/style.css" />
     <script src="script.js"></script>
   </head>
   <body>
-    <header>
-    </header>
+    <header></header>
     <h1>Lobby</h1>
     <div id="roomId"></div>
-    <br>
+    <br />
     <div id="activity"></div>
-    <br>
+    <br />
     <div id="status"></div>
-    <br>
+    <br />
     <div id="players"></div>
-    <br>
+    <br />
     <div id="controls">
       <button id="startGame">Start Game</button>
     </div>
@@ -44,28 +43,28 @@
       document.getElementById("roomId").innerText = `Lobby ID -> ${roomId}`;
 
       let maze = [];
-      let id = '';
-      const canvas = document.getElementById('gameCanvas');
-      const ctx = canvas.getContext('2d');
+      let id = "";
+      const canvas = document.getElementById("gameCanvas");
+      const ctx = canvas.getContext("2d");
       let ball = { x: 1, y: 1 };
-      let ballcol = 'red';
+      let ballcol = "red";
       const cellSize = 7;
 
-      window.addEventListener('keydown', event => {
-          switch (event.key) {
-              case 'ArrowUp':
-                  moveBall(maze, ball, 0, -1, ctx, cellSize);
-                  break;
-              case 'ArrowDown':
-                  moveBall(maze, ball, 0, 1, ctx, cellSize);
-                  break;
-              case 'ArrowLeft':
-                  moveBall(maze, ball, -1, 0, ctx, cellSize);
-                  break;
-              case 'ArrowRight':
-                  moveBall(maze, ball, 1, 0, ctx, cellSize);
-                  break;
-          }
+      window.addEventListener("keydown", (event) => {
+        switch (event.key) {
+          case "ArrowUp":
+            moveBall(maze, ball, 0, -1, ctx, cellSize);
+            break;
+          case "ArrowDown":
+            moveBall(maze, ball, 0, 1, ctx, cellSize);
+            break;
+          case "ArrowLeft":
+            moveBall(maze, ball, -1, 0, ctx, cellSize);
+            break;
+          case "ArrowRight":
+            moveBall(maze, ball, 1, 0, ctx, cellSize);
+            break;
+        }
       });
 
       document.getElementById("startGame").onclick = () => {
@@ -73,8 +72,8 @@
         startTimer();
       };
 
-      document.getElementById('back').addEventListener('click', function() {
-        window.location.href = '/'; 
+      document.getElementById("back").addEventListener("click", function () {
+        window.location.href = "/";
       });
 
       socket.emit("joinRoom", roomId);
@@ -88,7 +87,7 @@
       socket.on("roomNotFound", () => {
         const statusElement = document.getElementById("status");
         statusElement.innerText = `Room not found. Join an existing room or create a new room.`;
-        statusElement.style.color = "red"; 
+        statusElement.style.color = "red";
         document.getElementById("startGame").style.display = "none";
         document.getElementById("pauseButton").style.display = "none";
         document.getElementById("timer").style.display = "none";
@@ -140,24 +139,26 @@
           ball = user.position;
           drawMaze(data.maze, ctx, cellSize);
           drawBall(ball, ctx, cellSize);
+          mai;
         }
       });
 
-      socket.on('updatePositions', (data) => {
-            // {Users: [{id: 'player1', position: { x: 0, y: 0 }}, {id: 'player2', position: { x: 0, y: 0 }}]}
-            console.log(data);
+      //
+
+      socket.on("updatePositions", (data) => {
+        // {Users: [{id: 'player1', position: { x: 0, y: 0 }}, {id: 'player2', position: { x: 0, y: 0 }}]}
+        console.log(data);
       });
 
       document.addEventListener("DOMContentLoaded", function () {
         const modal = document.getElementById("startGameModal");
         const enterButton = document.getElementById("enterButton");
 
-
         if (modal && enterButton) {
           modal.style.display = "block";
 
           enterButton.addEventListener("click", function () {
-            modal.style.display = "none"; 
+            modal.style.display = "none";
           });
         } else {
           console.error("Modal or Start Button not found.");
@@ -178,23 +179,41 @@
         });
       });
 
-      document.getElementById('fullscreenBtn').addEventListener('click', function() {
-        const canvas = document.getElementById('gameCanvas');
-        const requestFullscreen = canvas.requestFullscreen || canvas.mozRequestFullScreen || canvas.webkitRequestFullscreen || canvas.msRequestFullscreen;
-        const exitFullscreen = document.exitFullscreen || document.mozCancelFullScreen || document.webkitExitFullscreen || document.msExitFullscreen;
+      document
+        .getElementById("fullscreenBtn")
+        .addEventListener("click", function () {
+          const canvas = document.getElementById("gameCanvas");
+          const requestFullscreen =
+            canvas.requestFullscreen ||
+            canvas.mozRequestFullScreen ||
+            canvas.webkitRequestFullscreen ||
+            canvas.msRequestFullscreen;
+          const exitFullscreen =
+            document.exitFullscreen ||
+            document.mozCancelFullScreen ||
+            document.webkitExitFullscreen ||
+            document.msExitFullscreen;
 
-        if (!document.fullscreenElement) {
-          requestFullscreen.call(canvas).catch(err => {
-            alert("Fullscreen mode failed to activate. Make sure you're using a compatible browser and your site is served over HTTPS.");
-            console.error("Error attempting to enable fullscreen mode:", err.message);
-          });
-        } else {
-          exitFullscreen.call(document).catch(err => {
-            alert("Failed to exit fullscreen mode.");
-            console.error("Error attempting to disable fullscreen mode:", err.message);
-          });
-        }
-      });
+          if (!document.fullscreenElement) {
+            requestFullscreen.call(canvas).catch((err) => {
+              alert(
+                "Fullscreen mode failed to activate. Make sure you're using a compatible browser and your site is served over HTTPS."
+              );
+              console.error(
+                "Error attempting to enable fullscreen mode:",
+                err.message
+              );
+            });
+          } else {
+            exitFullscreen.call(document).catch((err) => {
+              alert("Failed to exit fullscreen mode.");
+              console.error(
+                "Error attempting to disable fullscreen mode:",
+                err.message
+              );
+            });
+          }
+        });
 
       let timerInterval;
       let totalSeconds = 0;
@@ -228,7 +247,6 @@
         .getElementById("enterButton")
         .addEventListener("click", function () {
           document.getElementById("startGameModal").style.display = "none";
-
         });
 
       document
@@ -242,37 +260,49 @@
           }
         });
 
-        function drawMaze(maze, ctx, cellSize) {
-            for (let y = 0; y < maze.length; y++) {
-                for (let x = 0; x < maze[y].length; x++) {
-                    ctx.fillStyle = maze[y][x] === 1 ? 'black' : 'white';
-                    ctx.fillRect(x * cellSize, y * cellSize, cellSize, cellSize);
-                }
-            }
+      function drawMaze(maze, ctx, cellSize) {
+        for (let y = 0; y < maze.length; y++) {
+          for (let x = 0; x < maze[y].length; x++) {
+            ctx.fillStyle = maze[y][x] === 1 ? "black" : "white";
+            ctx.fillRect(x * cellSize, y * cellSize, cellSize, cellSize);
+          }
         }
+      }
 
-        function drawBall(ball, ctx, cellSize) {
-            ctx.fillStyle = ballcol;
-            ctx.beginPath();
-            ctx.arc(ball.x * cellSize + cellSize / 2, ball.y * cellSize + cellSize / 2, cellSize / 2, 0, Math.PI * 2);
-            ctx.fill();
-        }
+      function drawBall(ball, ctx, cellSize) {
+        ctx.fillStyle = ballcol;
+        ctx.beginPath();
+        ctx.arc(
+          ball.x * cellSize + cellSize / 2,
+          ball.y * cellSize + cellSize / 2,
+          cellSize / 2,
+          0,
+          Math.PI * 2
+        );
+        ctx.fill();
+      }
 
-        function clearBall(ball, ctx, cellSize) {
-            ctx.fillStyle = 'white';
-            ctx.fillRect(ball.x * cellSize, ball.y * cellSize, cellSize, cellSize);
-        }
+      function clearBall(ball, ctx, cellSize) {
+        ctx.fillStyle = "white";
+        ctx.fillRect(ball.x * cellSize, ball.y * cellSize, cellSize, cellSize);
+      }
 
-        function moveBall(maze, ball, dx, dy, ctx, cellSize) {
-            const newX = ball.x + dx;
-            const newY = ball.y + dy;
-            if (newX >= 0 && newX < maze[0].length && newY >= 0 && newY < maze.length && maze[newY][newX] === 0) {
-                clearBall(ball, ctx, cellSize);
-                ball.x = newX;
-                ball.y = newY;
-                drawBall(ball, ctx, cellSize);
-            }
+      function moveBall(maze, ball, dx, dy, ctx, cellSize) {
+        const newX = ball.x + dx;
+        const newY = ball.y + dy;
+        if (
+          newX >= 0 &&
+          newX < maze[0].length &&
+          newY >= 0 &&
+          newY < maze.length &&
+          maze[newY][newX] === 0
+        ) {
+          clearBall(ball, ctx, cellSize);
+          ball.x = newX;
+          ball.y = newY;
+          drawBall(ball, ctx, cellSize);
         }
+      }
     </script>
   </body>
 </html>
