--- a/public/room.html
+++ b/public/room.html
@@ -47,7 +47,8 @@
       let id = '';
       const canvas = document.getElementById('gameCanvas');
       const ctx = canvas.getContext('2d');
-      let ball = { x: 1, y: 1 };
+      const ball = document.getElementById('ball');
+      let ballPos = { x: 1, y: 1 };
       let ballcol = 'red';
       const cellSize = 7;
       let velocity = { x: 0, y: 0 };
@@ -58,16 +59,16 @@
       window.addEventListener('keydown', event => {
           switch (event.key) {
               case 'ArrowUp':
-                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
+                  //moveBall(maze, velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowDown':
-                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
+                  moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowLeft':
-                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
+                  moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowRight':
-                  moveBall(maze, ball, velocity.x, velocity.y, ctx, cellSize);
+                  moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
                   break;
           }
       });
@@ -141,10 +142,10 @@
         if (user) {
           maze = data.maze;
           ballcol = user.color;
-          ball = user.position;
+          ballPos = user.position;
           drawMaze(data.maze, ctx, cellSize);
-          drawBall(ball, ctx, cellSize);
           initGyroscope();
+          //drawBall(ball, ctx, cellSize);
         }
       });
 
@@ -188,7 +189,7 @@
         const requestFullscreen = canvas.requestFullscreen || canvas.mozRequestFullScreen || canvas.webkitRequestFullscreen || canvas.msRequestFullscreen;
         const exitFullscreen = document.exitFullscreen || document.mozCancelFullScreen || document.webkitExitFullscreen || document.msExitFullscreen;
 
-        if (!document.fullscreenElement) {
+        if (!document.fullsncreenElement) {
           requestFullscreen.call(canvas).catch(err => {
             alert("Fullscreen mode failed to activate. Make sure you're using a compatible browser and your site is served over HTTPS.");
             console.error("Error attempting to enable fullscreen mode:", err.message);
@@ -256,27 +257,28 @@
             }
         }
 
-        function drawBall(ball, ctx, cellSize) {
-            ctx.fillStyle = ballcol;
-            ctx.beginPath();
-            ctx.arc(ball.x * cellSize + cellSize / 2, ball.y * cellSize + cellSize / 2, cellSize / 2, 0, Math.PI * 2);
-            ctx.fill();
-        }
+        /*function drawBall(ball, ctx, cellSize) {
+          ballPos.x = Math.max(0, Math.min(ballPos.x, 9));
+          ballPos.y = Math.max(0, Math.min(ballPos.y, 9));
+          ball.style.transform = `translate(${ballPos.x * cellSize}vmin, ${ballPos.y * cellSize}vmin)`;
+        }*/
 
         function clearBall(ball, ctx, cellSize) {
             ctx.fillStyle = 'white';
             ctx.fillRect(ball.x * cellSize, ball.y * cellSize, cellSize, cellSize);
         }
 
-        function moveBall(maze, ball, dx, dy, ctx, cellSize) {
-            const newX = ball.x + dx;
-            const newY = ball.y + dy;
+        function moveBall(maze, dx, dy, ctx, cellSize) {
+            const newX = ballPos.x + dx;
+            const newY = ballPos.y + dy;
+            console.log(newX,newY);
             if (newX >= 0 && newX < maze[0].length && newY >= 0 && newY < maze.length && maze[newY][newX] === 0) {
-                clearBall(ball, ctx, cellSize);
-                ball.x = newX;
-                ball.y = newY;
-                drawBall(ball, ctx, cellSize);
-            }
+              ballPos.x = newX;
+              ballPos.y = newY;
+              ball.style.transform = `translate(${ballPos.x * cellSize}vmin, ${ballPos.y * cellSize}vmin)`;
+                //drawBall(ball, ctx, cellSize);
+              }
+              requestAnimationFrame(moveBall);
         }
         async function initGyroscope() {
             try {
