--- a/public/room.html
+++ b/public/room.html
@@ -62,13 +62,13 @@
                   //moveBall(maze, velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowDown':
-                  moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
+                  //moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowLeft':
-                  moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
+                  //moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
                   break;
               case 'ArrowRight':
-                  moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
+                  //moveBall(maze,  velocity.x, velocity.y, ctx, cellSize);
                   break;
           }
       });
